sphinx conf.py file updated to use file provided by https://bitbucket.org/dowski/mercurial-version-info-plugin at each commit

--- a/.hgignore
+++ b/.hgignore
@@ -7,4 +7,6 @@ documentation/sphinx/_build/*
 documentation/postgres_autodoc
 documentation/videos
 documentation/WEBSITE
-
+src/lib_openmolar/_version*
+.*\.pyc$
+.*~$
