--- a/misc/admin/bin/openmolar2-admin.desktop
+++ b/misc/admin/bin/openmolar2-admin.desktop
@@ -1,14 +1,13 @@
-#!/usr/bin/env xdg-open
 
 [Desktop Entry]
 Version=1.0
 Name=OpenMolar-Server
 GenericName=Dental Practice Management Suite
 Comment=Dental Practice Management Software
-Exec=openmolar-server
-Icon=openmolar-server
+Exec=openmolar2-admin
+Icon=openmolar-admin
 Terminal=false
 Type=Application
 MimeType=application/x-openmolar;
 Categories=Office;
-Name[en_GB]=OpenMolar-Admin
+Name[en_GB]=OpenMolar2-Admin
