removed the gui command line parser.. ehat was I thinking there? updated rst docs to update the move to code.google.com and hg

--- a/om_setup.cfg
+++ b/om_setup.cfg
@@ -20,3 +20,7 @@ CLIENT_version=1.2.0alpha1
 #uncomment next line to install the translation package
 #LANG_version=1.2.0alpha1
 
+#uncomment next line to install lib_openmolar.client and the client app
+STARTUP_version=1.2.0
+
+
