--- a/.hgignore
+++ b/.hgignore
@@ -4,8 +4,9 @@ documentation/epydoc/html
 documentation/sphinx/technical/classes
 documentation/sphinx/technical/classes/*
 documentation/sphinx/_build/*
-documentation/postgres_autodoc
-documentation/videos
+documentation/postgres_autodoc/*
+documentation/videos/*
 documentation/WEBSITE
+documentation/sphinx/images
 .*\.pyc$
 .*~$
