schema tweak, more documentation, and treatment model work. also made it so that if user1 is a clinician, that become the px_clinician for treatments automatically. Will need to have some notifications of this before going live.

--- a/documentation/sphinx/Makefile
+++ b/documentation/sphinx/Makefile
@@ -98,6 +98,6 @@ doctest:
 	      "results in $(BUILDDIR)/doctest/output.txt."
 	      
 publish:
-	rsync -av .build/html/ amazon:rg_website/openmolar2/sphinx/
+	rsync -av _build/html/ amazon:rg_website/openmolar2/sphinx/
 	rsync -avk videos/* amazon:rg_website/openmolar2/sphinx/videos/
 	
