setup tools seem to be working well on debian based distros.

--- a/misc/admin/openmolar2-admin.desktop
+++ b/misc/admin/openmolar2-admin.desktop
@@ -4,7 +4,7 @@ Version=1.0
 Name=OpenMolar-Server
 GenericName=Dental Practice Management Suite
 Comment=Dental Practice Management Software
-Exec=openmolar2-admin
+Exec=openmolar-admin
 Icon=openmolar-admin
 Terminal=false
 Type=Application
