--- a/misc/client/openmolar2.desktop
+++ b/misc/client/openmolar2.desktop
@@ -4,7 +4,7 @@ Version=1.0
 Name=OpenMolar2
 GenericName=Dental Practice Management Suite
 Comment=Dental Practice Management Software
-Exec=openmolar2-client
+Exec=openmolar-client
 Icon=openmolar
 Terminal=false
 Type=Application
