debian packaging for the server. Also added a try except around pyscopg2's autocommit (to support earlier versions).

--- a/.hgignore
+++ b/.hgignore
@@ -18,6 +18,6 @@ MANIFEST.in
 setup.cnf
 setup_part.cnf
 blank_schema.sql
-.*.pem$
-VERSION.txt
-packaging/Makefile
+src/version.py
+releases/*
+tmp/*
