--- a/build_scripts/server/debian/control
+++ b/build_scripts/server/debian/control
@@ -2,17 +2,19 @@ Source: openmolar-server
 Section: misc
 Priority: extra
 Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
-Build-Depends: cdbs (>=0.4.49), debhelper (>= 5), python-central (>=0.5.6), python
-XS-Python-Version: >=2.5
-Standards-Version: 3.8.0
+Build-Depends: python-all, debhelper (>= 7)
 Homepage: http://www.openmolar.com
 
 Package: openmolar-server
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, postgresql, python-psycopg2
-XB-Python-Version: ${python:Versions}
+Section: misc
+Priority: extra
+Depends: ${python:Depends}, postgresql, python-psycopg2
 Description: Dental Practice Management Software - Server Component
- see http://www.openmolar.com for project description and links
+  the openmolar daemon running on port 230.
  .
- irc channel (for devs and users) is #openmolar on freenode.net
+ this provides remote call functions and status messages to bridge between 
+ the openmolar-admin application (which may be on a remote machine) and
+ the postgres database server (which is a dependency of this package)
+ see http://www.openmolar.com for project description and links
 
