--- a/build_scripts/server/debian/rules
+++ b/build_scripts/server/debian/rules
@@ -1,8 +1,3 @@
 #!/usr/bin/make -f
-
-DEB_PYTHON_SYSTEM=pycentral
-
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/python-distutils.mk
-
-# Add here any variable or target overrides you need.
+%:
+	dh $@ --buildsystem=python_distutils --with=python2
