--- a/build_scripts/admin/debian/control
+++ b/build_scripts/admin/debian/control
@@ -9,7 +9,7 @@ Package: openmolar-admin
 Architecture: all
 Section: misc
 Priority: extra
-Depends: ${python:Depends}, python-qt4, libqt4-sql-psql, openmolar-common
+Depends: ${python:Depends}, openmolar-common, python-qscintilla2
 Description: Dental Practice Management Software - Admin Component
  .
  the openmolar-admin application provides functions for initialising a practice
