--- a/build_scripts/client/debian/control
+++ b/build_scripts/client/debian/control
@@ -9,7 +9,7 @@ Package: openmolar-client
 Architecture: all
 Section: misc
 Priority: extra
-Depends: ${python:Depends}, python-qt4, libqt4-sql-psql, openmolar-common
+Depends: ${python:Depends}, openmolar-common
 Description: Dental Practice Management Software - Client Application
  .
  the openmolar-client application provides the application designed to be run
