--- a/misc/client/openmolar2.desktop
+++ b/misc/client/openmolar2.desktop
@@ -5,7 +5,7 @@ Name=OpenMolar2
 GenericName=Dental Practice Management Suite
 Comment=Dental Practice Management Software
 Exec=openmolar-client
-Icon=openmolar
+Icon=openmolar2
 Terminal=false
 Type=Application
 MimeType=application/x-openmolar;
