--- a/build_scripts/common/debian/control
+++ b/build_scripts/common/debian/control
@@ -9,7 +9,7 @@ Package: openmolar-common
 Architecture: all
 Section: misc
 Priority: extra
-Depends: ${python:Depends}, python-qt4, python-qt4-sql, openmolar-namespace
+Depends: ${python:Depends}, python-qt4, python-qt4-sql, libqt4-sql-psql, openmolar-namespace
 Description: Dental Practice Management Software - common library
  .
  the openmolar-common packages code required by both the admin and client 
