--- a/build_scripts/server/debian/control
+++ b/build_scripts/server/debian/control
@@ -2,8 +2,10 @@ Source: openmolar-server
 Section: misc
 Priority: extra
 Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
-Build-Depends: python-all, debhelper (>= 7)
+Build-Depends: python, debhelper (>= 7)
 Homepage: http://www.openmolar.com
+Vcs-browser: http://code.google.com/p/openmolar/
+
 
 Package: openmolar-server
 Architecture: all
@@ -13,8 +15,7 @@ Depends: ${python:Depends}, postgresql, python-psycopg2, openmolar-namespace
 Description: Dental Practice Management Software - Server Component
   the openmolar daemon running on port 230.
  .
- this provides remote call functions and status messages to bridge between 
+ provides remote call functions and status messages to bridge between 
  the openmolar-admin application (which may be on a remote machine) and
  the postgres database server (which is a dependency of this package)
- see http://www.openmolar.com for project description and links
-
+ 
