--- a/build_scripts/common/debian/control
+++ b/build_scripts/common/debian/control
@@ -2,8 +2,10 @@ Source: openmolar-common
 Section: misc
 Priority: extra
 Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
-Build-Depends: python-all, debhelper (>= 7)
+Build-Depends: python, debhelper (>= 7)
 Homepage: http://www.openmolar.com
+Vcs-browser: http://code.google.com/p/openmolar/
+
 
 Package: openmolar-common
 Architecture: all
@@ -12,5 +14,5 @@ Priority: extra
 Depends: ${python:Depends}, python-qt4, python-qt4-sql, libqt4-sql-psql, openmolar-namespace
 Description: Dental Practice Management Software - common library
  .
- the openmolar-common packages code required by both the admin and client 
+ provides code required by both the admin and client 
  applications.
