modified build scripts and rebuilt all debs after moving to the subrepo setup

--- a/build_scripts/admin/Makefile
+++ b/build_scripts/admin/Makefile
@@ -14,11 +14,7 @@ DEB_DIR=$(HEAD)/build_scripts/$(SUFFIX)/debian/
 
 PACKAGE=openmolar-$(SUFFIX)
 
-# grep setup.cnf for major versions and head revno
-version=`grep '$(SUFFIX) =' $(HEAD)setup.cnf | sed "s/.*= //"`
-rev_no=`grep revision_number $(HEAD)setup.cnf | sed "s/.*= //"`
-
-VERSION=$(version)+hg$(rev_no)
+VERSION=`$(BUILD_SCRIPTS_DIR)/get_version.py $(SUFFIX)`
 
 clean_tmp:
 	rm -rf $(TMP_DIR)/*
