--- a/build_scripts/admin/Makefile
+++ b/build_scripts/admin/Makefile
@@ -16,7 +16,7 @@ PACKAGE=openmolar-$(SUFFIX)
 VERSION=`$(BUILD_SCRIPTS_DIR)/get_version.py $(SUFFIX)`
 
 clean_tmp:
-	rm -rf $(TMP_DIR)/*
+	rm -rf $(TMP_DIR)/!(README.txt)
 
 sources:
 	cd $(HEAD) ;\
