build scripts modified. should work immediately after an hg clone to a machine with all debian dependencies, keys etc..

--- a/build_scripts/server/Makefile
+++ b/build_scripts/server/Makefile
@@ -16,7 +16,8 @@ PACKAGE=openmolar-$(SUFFIX)
 VERSION=`$(BUILD_SCRIPTS_DIR)/get_version.py $(SUFFIX)`
 
 clean_tmp:
-	rm -rf $(TMP_DIR)/!(README.txt)
+	mkdir -p $(TMP_DIR)
+	rm -rf $(TMP_DIR)/*
 
 test:
 	echo $(VERSION) 
