--- a/build_scripts/namespace/debian/control
+++ b/build_scripts/namespace/debian/control
@@ -5,6 +5,7 @@ Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
 Build-Depends: python, debhelper (>= 7)
 Homepage: http://www.openmolar.com
 Vcs-browser: http://code.google.com/p/openmolar/
+X-Python-Version: >=2.6
 
 
 Package: openmolar-namespace
