--- a/build_scripts/admin/debian_packaging/py_support/debian/control
+++ b/build_scripts/admin/debian_packaging/py_support/debian/control
@@ -5,13 +5,13 @@ Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
 Build-Depends: debhelper (>= 7), python-support, python (>=2.6)
 Homepage: http://www.openmolar.com
 Vcs-browser: http://code.google.com/p/openmolar/
-Standards-Version: 3.8.4
+Standards-Version: 3.9.3
 
 Package: openmolar-admin
 Architecture: all
 Section: misc
 Priority: extra
-Depends: ${python:Depends}, openmolar-common, python-qscintilla2
+Depends: ${python:Depends}, ${misc:Depends}, openmolar-common, python-qscintilla2
 Description: Dental Practice Management Software - Admin Component
  .
  provides an assortment of command line and graphical tools for 
