--- a/build_scripts/client/debian_packaging/dh_python2/debian/control
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/control
@@ -5,12 +5,13 @@ Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
 Build-Depends: python, debhelper (>= 7)
 Homepage: http://www.openmolar.com
 Vcs-browser: http://code.google.com/p/openmolar/
+Standards-Version: 3.9.3
 
 Package: openmolar-client
 Architecture: all
 Section: misc
 Priority: extra
-Depends: ${python:Depends}, openmolar-common
+Depends: ${python:Depends}, ${misc:Depends}, openmolar-common
 Description: Dental Practice Management Software - Client Application
  .
  provides the application designed to be run in dental surgeries 
