--- a/build_scripts/client/debian_packaging/py_support/debian/control
+++ b/build_scripts/client/debian_packaging/py_support/debian/control
@@ -5,13 +5,13 @@ Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
 Build-Depends: debhelper (>= 7), python-support, python (>=2.6)
 Homepage: http://www.openmolar.com
 Vcs-browser: http://code.google.com/p/openmolar/
-Standards-Version: 3.8.4
+Standards-Version: 3.9.3
 
 Package: openmolar-client
 Architecture: all
 Section: misc
 Priority: extra
-Depends: ${python:Depends}, openmolar-common
+Depends: ${python:Depends}, ${misc:Depends}, openmolar-common
 Description: Dental Practice Management Software - Client Application
  .
  provides the application designed to be run in dental surgeries 
