--- a/build_scripts/common/debian_packaging/dh_python2/debian/control
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/control
@@ -5,13 +5,13 @@ Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
 Build-Depends: python, debhelper (>= 7)
 Homepage: http://www.openmolar.com
 Vcs-browser: http://code.google.com/p/openmolar/
-
+Standards-Version: 3.9.3
 
 Package: openmolar-common
 Architecture: all
 Section: misc
 Priority: extra
-Depends: ${python:Depends}, python-qt4, python-qt4-sql, libqt4-sql-psql, openmolar-namespace
+Depends: ${python:Depends}, ${misc:Depends}, python-qt4, python-qt4-sql, libqt4-sql-psql, openmolar-namespace
 Description: Dental Practice Management Software - common library
  .
  provides code required by both the admin and client 
