--- a/build_scripts/server/debian_packaging/py_support/debian/control
+++ b/build_scripts/server/debian_packaging/py_support/debian/control
@@ -5,13 +5,13 @@ Maintainer: Neil Wallace <rowinggolfer@googlemail.com>
 Build-Depends: debhelper (>= 7), python-support, python (>=2.6)
 Homepage: http://www.openmolar.com
 Vcs-browser: http://code.google.com/p/openmolar/
-Standards-Version: 3.8.4
+Standards-Version: 3.9.3
 
 Package: openmolar-server
 Architecture: all
 Section: misc
 Priority: extra
-Depends: ${python:Depends}, postgresql, python-psycopg2, openmolar-namespace
+Depends: ${python:Depends}, ${misc:Depends}, postgresql, python-psycopg2, openmolar-namespace
 Description: Dental Practice Management Software - Server Component
   the openmolar daemon running on port 230.
  .
