re-thinking of the server structure. I intend to make the ManageDatabaseDialog respond to information it receives from the server now. Am well on the way to doing this :)

--- a/build_scripts/Makefile
+++ b/build_scripts/Makefile
@@ -211,7 +211,7 @@ debs:
 			make deb OMSUFFIX=$(suffix) DIST=$(dist) NEW_CHANGELOG=False;) \
 	)
 	
-	make debsigns
+	#make debsigns
 	
 debsign:
 	@echo "signing the debian packages"
