cleaned up and tested the setup.py code.

--- a/src/config_files/openmolar_server.conf
+++ b/src/config_files/openmolar_server.conf
@@ -35,6 +35,6 @@ port = 230
 # location of the certs used to ensure that data over port 230
 # is wrapped in ssl.
 # you should probably create your own certs.
-cert = /etc/openmolar/cert.pem
-key = /etc/openmolar/privatekey.pem
+cert = /usr/share/openmolar/cert.pem
+key = /usr/share/openmolar/privatekey.pem
 
