work on beefing up the information given from the OMserver when admin application is started up.

--- a/src/lib_openmolar/admin/resources/Makefile
+++ b/src/lib_openmolar/admin/resources/Makefile
@@ -1,4 +1,4 @@
 #MakeFile
 
 resources:
-	pyrcc4 -py2 -no-compress resources.qrc > ../qrc_resources.py
+	pyrcc4 -py2 resources.qrc > ../qrc_resources.py
