--- a/src/lib_openmolar/client/resources/Makefile
+++ b/src/lib_openmolar/client/resources/Makefile
@@ -1,4 +1,4 @@
 #MakeFile
 
 resources:
-	pyrcc4 -py2 -no-compress resources.qrc > ../qrc_resources.py
+	pyrcc4 -py2 resources.qrc > ../qrc_resources.py
