--- a/src/lib_openmolar/common/resources/Makefile
+++ b/src/lib_openmolar/common/resources/Makefile
@@ -1,4 +1,4 @@
 #MakeFile
 
 resources:
-	pyrcc4 -py2 -no-compress resources.qrc > ../qt4/qrc_resources.py
+	pyrcc4 -py2 resources.qrc > ../qt4/qrc_resources.py
